# w-TelegramSelfBot

./: .env.example  .gitignore  .windsurfrules  Dockerfile  How_To_Run_EN.md  How_To_Run_FA.md  README.md  SelfBot Guide.md  TaskList.md  docker-compose.yml  main.py  pylint_core_report.txt  pyproject.toml  pytest.ini  requirements.txt
api/: Dockerfile  main.py  run.py
api/models/: base.py  plugin.py  user.py
api/routers/: plugins.py  users.py
config/: app.json  logging.json
core/: background_tasks.py  client.py  config.py  crypto.py  database.py  database_cache.py  event_handler.py  exceptions.py  license_manager.py  localization.py  logger.py  plugin_manager.py  plugin_marketplace.py  redis_manager.py  scheduler.py
core/database/: base.py  redis.py  sql.py
database/: migration_manager.py
database/migrations/: 01_initial_tables.sql  02_row_level_security.sql  03_default_data.sql  __init__.py
docs/api/: README.md
docs/plugin_development/: README.md
docs/user_guide/: README.md
plugins/: __init__.py  base_plugin.py
plugins/admin/: __init__.py  bot_manager.py  user_manager.py
plugins/ai/: __init__.py  image_generator.py  openai_interface.py  (+2 more)
scripts/: __init__.py  code_cleanup.py  debug_check.py  install.sh  setup_redis.py  update.sh
tests/: conftest.py  full_project_test.py  run_tests.py  run_unit_tests.py  test_db_connection.py
web/: .eslintignore  .eslintrc.json  Dockerfile  custom.d.ts  index.html  jest.config.js  jest.setup.js  package.json  tailwind.config.js  tsconfig-schema-ignore.js  tsconfig.json  tsconfig.node.json  vite.config.ts
(+136 files in other folders)
